--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,12 +17,12 @@ on:
 # Configure constants for this workflow.
 env:
   # The base filename of the binary produced by `cargo build`.
-  BINARY: bevy_jam_5
+  BINARY: bevy-jam-5
   # The name to use for the packaged application produced by this workflow.
-  PACKAGE_NAME: bevy_jam_5
+  PACKAGE_NAME: bevy-jam-5
   # The itch.io page to upload to, in the format: `user-name/project-name`.
   # Comment this out to disable.
-  ITCH_TARGET: askur/bevy_jam_5
+  ITCH_TARGET: askur/bevy-jam-5
   # The organization or author that owns the rights to the game.
   OWNER: askur
   # The path to the assets directory.
