--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bevy_jam_5"
+name = "bevy-jam-5"
 authors = ["Askor <askor@users.noreply.github.com>"]
 version = "0.1.0"
 edition = "2021"
